forgot to add collection in page

--- a/_leetcode-solutions/1512. Number of Good Pairs.md
+++ b/_leetcode-solutions/1512. Number of Good Pairs.md
@@ -2,6 +2,7 @@
 title: '1512. Number of Good Pairs'
 number: 1512
 date: 2023-10-03
+collection: leetcode-solutions
 permalink: /leetcode-solutions/1512/
 ---
 
